testdata/invalid/unknown_super.sol
rise Child enlights Parent {
    private int x;
}
